# Acess-mdb-MPC

./: .gitignore  .windsurfrules  Access.py  README.md  TASKS from ACCESS-COM.md  __main__.py  install_mcp.py  pyproject.toml  run_server.py  server.py  simple_client.py  test_access_mcp.py  test_server.py
mcp_access/: __init__.py  __main__.py  server.py
mcp_access.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
